# dialekt-manifest-validator

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/invalid/: bad_cron.agent.yaml  bad_timezone.agent.yaml  bad_uuid.agent.yaml  missing_autonomy.agent.yaml
examples/valid/: minimal.agent.yaml  scheduled_report.agent.yaml  sql_analyst.agent.yaml
schemas/: agent-manifest-v1.0.1.json
src/dialekt_manifest/: __init__.py  cli.py  entropy.py  errors.py  paths.py  schema.py  security.py  validator.py
tests/: conftest.py  test_cli.py  test_mcp_servers.py  test_paths.py  test_schema.py  test_security.py  test_variables.py
tests/fixtures/invalid/: missing_filesystem_capability.agent.yaml  secret_anthropic_key.agent.yaml  secret_db_connection.agent.yaml  secret_openai_key.agent.yaml  undeclared_variable.agent.yaml  unsafe_path.agent.yaml
tests/fixtures/valid/: carousel_generator.agent.yaml  code_review.agent.yaml  mcp_basic.agent.yaml  scheduled_report.agent.yaml
